# sparse_rgbd_vo

./: CMakeLists.txt  README.md  package.xml
config/: conf.rviz
include/sparse_rgbd_vo/: cam_param.hpp  local_map.hpp  pnp_solver.hpp  sparse_rgbd_vo.hpp  sparse_rgbd_vo_dataset_node.hpp  sparse_rgbd_vo_node.hpp
launch/: sparse_rgbd_vo_realsense_rviz.launch  sparse_rgbd_vo_rviz.launch
src/: local_map.cpp  main.cpp  main_dataset.cpp  pnp_solver.cpp  sparse_rgbd_vo.cpp  sparse_rgbd_vo_dataset_node.cpp  sparse_rgbd_vo_node.cpp
